# Asteroids

./: .clang-format  .clang-tidy  .gitignore  .plan  CMakeLists.txt  manage.py  uncrustify.cfg
.github/workflows/: pipeline.yml
assets/: objects.json
assets/Sprites/: SpaceInvadersSpriteSheet.json  asteroid1.json  bullet.json  invader_C.json  invader_death.json  missile.json  player_death.json  player_idle.json  player_run.json  projectile_B.json  projectile_C.json  wall.json
assets/scripts/: asset_loader.lua  ent_creation.lua
src/: main.cpp
src/engine/: CMakeLists.txt
src/engine/core/: Application.cpp  Application.h  BaseComponent.h  Context.h  CoreModule.h  Engine.cpp  Engine.h  GameObject.h  IGame.h  IGameState.h  Log.cpp  Log.h  Scene.h  ScriptManager.cpp  ScriptManager.h  TimeManager.cpp  TimeManager.h  pch.h
src/engine/core/components/: LifeComponent.h  TransformComponent.h
src/engine/core/interfaces/: IGame.h  IGameState.h  ISystem.h
src/engine/core/modules/: LifeModule.h  LifeSystem.cpp  LifeSystem.h
src/engine/events/: EngineEvents.h  EventBus.h
src/engine/modules/assets/: Animation.h  AssetManager.cpp  AssetManager.h  AssetModule.h  Font.h  Sound.h  Texture.h  resolveAssets.cpp  resolveAssets.h
src/engine/modules/audio/: AudioModule.h  SoundComponent.h  SoundSystem.cpp  SoundSystem.h
src/engine/modules/graphics/: AnimationComponent.h  AnimationSystem.cpp  AnimationSystem.h  RenderModule.h  RenderSystem.cpp  RenderSystem.h  SpriteComponent.h  UITextComponent.h
src/engine/modules/input/: InputManager.cpp  InputManager.h  InputModule.h
src/engine/modules/physics/: ColliderComponent.h  CollisionSystem.cpp  CollisionSystem.h  PhysicsComponent.h  PhysicsModule.h  PhysicsSystem.cpp  PhysicsSystem.h
src/engine/modules/rendering/: AnimationComponent.h  AnimationSystem.cpp  AnimationSystem.h  RenderModule.h  RenderSystem.cpp  RenderSystem.h  SpriteComponent.h  UITextComponent.h
src/engine/scripting/: ComponentRegistry.cpp  ComponentRegistry.h  SceneRegistry.h  ScriptManager.cpp  ScriptManager.h  StateRegistry.h
src/engine/scripting/bindings/: ComponentBinding.cpp
src/engine/utils/: Random.h  Types.h
src/game/: CMakeLists.txt  main.cpp
src/game/core/: Asteroids.cpp  Asteroids.h  CoreModule.h  GameTypes.h  screenWrapper.cpp  screenWrapper.h
src/game/core/components/: Tags.h
src/game/core/tags/: Tags.h  WallComponent.h
src/game/events/: GameEvents.h
src/game/modules/control/: AIComponent.h  AISystem.cpp  AISystem.h  ControlModul.h  InputComponent.h  InvaderComponent.h  PlayerComponent.h  PlayerControlSystem.cpp  PlayerControlSystem.h
src/game/modules/emitter/: EmiterModule.h  EmitterComponent.h  EmitterSystem.cpp  EmitterSystem.h
src/game/modules/health/: HealthComponent.h  HealthModule.h  HealthSystem.cpp  HealthSystem.h  LifetimeComponent.h  LifetimeSystem.cpp  LifetimeSystem.h
src/game/modules/player/: PlayerModule.h  PlayerSystem.cpp  PlayerSystem.h
src/game/modules/ui/: GameStateComponent.h  ScoreSystem.cpp  ScoreSystem.h  UIModule.h  UISystem.cpp  UISystem.h
src/game/scripting/binding/: ComponentBinding.cpp
src/game/states/: GameOverState.cpp  GameOverState.h  LevelCompletedState.cpp  LevelCompletedState.h  PauseState.cpp  PauseState.h  RunState.cpp  RunState.h
src/sandbox/: CMakeLists.txt  main.cpp
src/sandbox/core/: CoreModule.h  Sandbox.cpp  Sandbox.h
src/sandbox/core/components/: Tags.h
tests/: CMakeLists.txt  CollisionTest.cpp  FormatTest.cpp  SanityTest.cpp
